// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correct markup with level prop 1`] = `
<h3
  className="NASA1975-heading NASA1975-heading--lg NASA1975-heading--medium "
>
  Test heading text
</h3>
`;

exports[`renders correct markup with multiple props 1`] = `
<h4
  className="NASA1975-heading NASA1975-heading--xs NASA1975-heading--light "
>
  Test heading text
</h4>
`;

exports[`renders correct markup with no props 1`] = `
<h1
  className="NASA1975-heading NASA1975-heading--lg NASA1975-heading--medium "
>
  Test heading text
</h1>
`;

exports[`renders correct markup with size prop 1`] = `
<h1
  className="NASA1975-heading NASA1975-heading--md NASA1975-heading--medium "
>
  Test heading text
</h1>
`;

exports[`renders correct markup with weight prop 1`] = `
<h1
  className="NASA1975-heading NASA1975-heading--lg NASA1975-heading--light "
>
  Test heading text
</h1>
`;
